improving UI/UX by adding CTA for Hero and others

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Transparent & No-nonsense Tech Jobs For You | next.Jobs</title>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="/favicon20x20.png">
 </head>
 <body>
     <header>
@@ -35,6 +36,7 @@
     <section class="hero">
         <img src="https://images.pexels.com/photos/5325074/pexels-photo-5325074.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Hero image"/>
         <h2 class="herotext">Your Transparent & No-Nonsense Tech Job Listing Service</h2>
+        <h4 class="herosubtext">Learn More</h4>
     </section>
     </section>
     <section class="mainbody">
@@ -215,8 +217,8 @@
         </div>
         <section class="mainbody-special">
             <div class="textwrapper">
-                <p>Partnership</p>
-                <h1 class="h1big">next.Jobs For Recruiters</h1>
+                <p>List A Job</p>
+                <h1 class="h1big">next.Recruiters</h1>
                 <p class="bodytexty">Want to score the best talent while busting the old tradition of hidden salaries? Time to sync up with next.Jobs. We're pioneering a more transparent, fair, and future-forward way of hiring. Ready to reinvent the rules with us?</p>
                 <button class="primarycta">Sign-up As A Recruiter</button>
                 <br>
@@ -226,7 +228,7 @@
         <section class="mainbody-specialtwo">
             <div class="textwrapper">
                 <p>Find A Job</p>
-                <h1 class="h1big">next.Jobs For JobSeekers</h1>
+                <h1 class="h1big">next.Seekers</h1>
                 <p class="bodytexty">Eager to find a job in a company that champions transparency, fairness, and innovation? No more guesswork about hidden salaries - with us, honesty is policy.</p>
                 <button class="primarycta">Sign-up As A Seeker</button>
                 <br>
