--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="hero">
         <img src="https://images.pexels.com/photos/5325074/pexels-photo-5325074.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Hero image"/>
         <h2 class="herotext">Your Transparent & No-Nonsense Tech Job Listing Service</h2>
-        <h4 class="herosubtext">Learn More</h4>
+        <h4 class="herosubtext">Learn more</h4>
     </section>
     </section>
     <section class="mainbody">
